create double eliminations, fix bugs
