# apps/backend/src/controllers/tournamentPhaseController.ts
@@ -10,18 +10,38 @@ import { TournamentPhaseService } from '../services/tournament-phase.service';
 import { BaseResponse } from '../../custom-models/api/base-response';
 import {
   GroupStagePhaseDataDto,
+  ParticipantIdsDataDto,
   UpdateTournamentAndPhaseDto,
 } from '../../custom-models/api/tournament-phase';
 
 @ApiTags('tournamentPhase')
-@ApiExtraModels(GroupStagePhaseDataDto, UpdateTournamentAndPhaseDto)
+@ApiExtraModels(
+  GroupStagePhaseDataDto,
+  UpdateTournamentAndPhaseDto,
+  ParticipantIdsDataDto,
+)
 @Controller('tournamentPhase')
 export class TournamentPhaseController {
   constructor(
     private readonly tournamentPhaseService: TournamentPhaseService,
   ) {}
 
-  // Add Phase to the tournament
+  // Add Elimination to the tournament
+  @Post('doubleElimination/:tournamentId')
+  @ApiOperation({ summary: 'Create double elimination phase for a tournament' })
+  @ApiOkResponse({ type: BaseResponse })
+  @ApiBody({ type: ParticipantIdsDataDto })
+  addDoubleEliminationToTournament(
+    @Param('tournamentId') tournamentId: string,
+    @Body() entity: ParticipantIdsDataDto,
+  ): Promise<BaseResponse> {
+    return this.tournamentPhaseService.createDoubleEliminations(
+      entity,
+      +tournamentId,
+    );
+  }
+
+  // Add Group Stage Phase to the tournament
   @Post('groupStage/:tournamentId')
   @ApiOperation({ summary: 'Create group stage phase for a tournament' })
   @ApiOkResponse({ type: BaseResponse })
@@ -30,10 +50,10 @@ export class TournamentPhaseController {
     @Param('tournamentId') tournamentId: string,
     @Body() entity: GroupStagePhaseDataDto,
   ): Promise<BaseResponse> {
-    return this.tournamentPhaseService.createGroupStage(entity, +tournamentId);
+    return this.tournamentPhaseService.createGroupStages(entity, +tournamentId);
   }
 
-  // Upadte Phase and the tournament
+  // Update Phase and the tournament status
   @Post(':phaseId/:tournamentId')
   @ApiOperation({ summary: 'Update tournamnet phase' })
   @ApiOkResponse({ type: BaseResponse })
